--- a/summary_2/index.html
+++ b/summary_2/index.html
@@ -419,14 +419,14 @@
                     <img src="./img/img1.png" alt="">
                 </div>
                 <div class="col txt">
-                    <h4 class="blue">The free-ﬂow of water by gravity</h4>
+                    <h4 data-stage="1" class="blue">The free-ﬂow of water by gravity</h4>
                     <p>Gravity will do what it does best and pull on the water until it ﬁnds a crack or hole to escape through. Tiny cracks, plumbing protrusions, electrical ducts and so on are all escape routes. 
                         It is vital that you react quickly to prevent the spread of water to adjacent properties and those below in order to minimize cleanup costs.</p>
                 </div>
             </div>
             <div class="row card mt-40">
                 <div class="col txt">
-                    <h4 class="blue">The wicking of moisture into materials</h4>
+                    <h4 data-stage="2" class="blue">The wicking of moisture into materials</h4>
                     <p>Even if the water is contained, it will continue to cause damage as long as it is in touch with gypsum boards, wooden ﬂoors, furniture, documents etc. These materials act like sponges and suck up the water , while getting to damage in the process.   
                         You need thorough water-extraction strategies, and you need to move fast in order to drastically reduce damage. </p>
                 </div>
@@ -439,14 +439,14 @@
                     <img src="./img/img3.png" alt="">
                 </div>
                 <div class="col txt">
-                    <h4 class="blue">High humidity damage</h4>
+                    <h4 data-stage="3" class="blue">High humidity damage</h4>
                     <p>You may think the nightmare is over when you throw out the last bucket of water , but it could be the beginning of something worse. Water evaporates from soaked items, saturating the air and then goes on to damage previously unaffected materials. Watch out for condensation forming on walls, ceiling tiles sagging and paper stock taking on moisture. 
                         The battle is not lost. The damage is mitigated by controlling the relative humidity inside the building through the use of high-capacity dehumidiﬁers. Act promptly before it leads to active microbial growth.</p>
                 </div>
             </div>
             <div class="row card mt-40">
                 <div class="col txt">
-                    <h4 class="blue">Active microbial growth </h4>
+                    <h4 data-stage="4" class="blue">Active microbial growth </h4>
                     <p>Once materials have taken on sufficient moisture, they can support the growth of mold and mildew. You can prevent this from happening by controlling three key conditions such as the building’s air and circulation, temperature and relative humidity. 
                         The experts can help prevent continual microbial growth and conﬁne the damage to the area that was affected directly by the water.</p>
                 </div>
@@ -459,7 +459,7 @@
                     <img src="./img/img5.png" alt="">
                 </div>
                 <div class="col txt">
-                    <h4 class="blue">The spread of microbial growth to other areas</h4>
+                    <h4 data-stage="5" class="blue">The spread of microbial growth to other areas</h4>
                     <p>The movement of people throughout the building, air circulation systems and/or elevator movement from ﬂoor-to-ﬂoor could spread microbial growth to other parts of the building. A comprehensive plan is needed, and professional contractors should be consulted. 
                         Time is of the essence and rapid response is needed to reduce interruption, reduce overall restoration costs and prevent irreplaceable items from being damaged. This is where our help and expertise becomes invaluable.  Our ﬂeet of dehumidiﬁers, fans, monitoring instruments, with technicians, are standing by, 24/7 all year round.</p>
                 </div>
